# cyra

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
bench/: CMakeLists.txt  main.cpp
benchmarks/techempower/ruvia/: CMakeLists.txt  README.md  benchmark_config.json  main.cpp  ruvia.dockerfile
examples/: CMakeLists.txt  README.md  api_surface.cpp  auth_jwt.cpp  basic_http.cpp  database.cpp  files_static.cpp  models_validation.cpp  redis.cpp  runtime_config.cpp  streaming.cpp  websocket.cpp
examples/public/: hello.txt  index.html
include/ruvia/: version.h
include/ruvia/app/: App.h  Dotenv.h  Task.h
include/ruvia/auth/: Jwt.h
include/ruvia/db/: Db.h
include/ruvia/http/: Context.h  Controller.h  Error.h  FileResponse.h  HeaderUtils.h  HttpLimits.h  HttpParser.h  HttpStatus.h  HttpTypes.h  JsonUtils.h  Model.h  StaticFiles.h  UrlEncoding.h  Validation.h  WebSocket.h
include/ruvia/http/detail/model/: FormParser.h  JsonParser.h  Macros.h  Parser.h  RequestObjectVisitors.h  RuleTypes.h  Rules.h  Traits.h
include/ruvia/memory/: MemoryPool.h
include/ruvia/redis/: Redis.h
include/ruvia/router/: Router.h
src/: AsioAwait.h  pch.h  ruvia.cpp
src/app/: App.cpp  Dotenv.cpp
src/auth/: Jwt.cpp
src/db/: Db.cpp  DbInternal.h
src/http/: Controller.cpp  Error.cpp  HttpBodyFramer.h  HttpParser.cpp  HttpTypes.cpp
src/memory/: MemoryPool.cpp  MimallocOverride.cpp
src/net/: ConnectionScanner.cpp  ConnectionScanner.h  HttpContinueWriter.h  HttpDateCache.cpp  HttpDateCache.h  HttpRequestBody.h  HttpResponseWriter.cpp  HttpResponseWriter.h  HttpServer.cpp  HttpServer.h  HttpWebSocketConnection.h  HttpWebSocketUtils.cpp  HttpWebSocketUtils.h
src/redis/: Redis.cpp  RedisInternal.h
src/router/: Router.cpp  RouterInternal.h
tests/: CMakeLists.txt  test_error.cpp  test_file_response.cpp  test_header_utils.cpp  test_http_parser.cpp  test_http_types.cpp  test_integration.cpp  test_jwt.cpp  test_main.cpp  test_url_encoding.cpp
